--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "json-server": "^1.0.0-alpha.23"
+    "express": "^4.18.2",
+    "json-server": "^0.16.3",
+    "body-parser": "^1.20.2"
   }
 }
